# opuspy

./: .gitignore  CMakeLists.txt  MANIFEST.in  README.md  build_manylinux_wheels.sh  install_opus.sh  multilinux.env.Dockerfile  opuspy.cc  release.sh  setup.py
